--- a/app/data/_archived-items/114_biological-control-applicator.json
+++ b/app/data/_archived-items/114_biological-control-applicator.json
@@ -5,7 +5,7 @@
       "summary": "A fan-powered applicator.",
       "category": ["General"],
       "value": "906.00",
-      "score": "70",
+      "score": 70,
       "description": {
         "descriptionText01": "A fan-powered applicator.",
         "descriptionBullet01": "Should give an even distribution of up to 3m or more"
